--- a/AvalonStudio/AvalonStudio/packages.config
+++ b/AvalonStudio/AvalonStudio/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Avalonia" version="0.2.0.1792-alpha" targetFramework="net452" />
+  <package id="Avalonia" version="0.2.0.1799-alpha" targetFramework="net452" />
   <package id="Avalonia.Desktop" version="0.2.0.1792-alpha" targetFramework="net452" />
+  <package id="Avalonia.Skia.Desktop" version="0.2.0.1799-alpha" targetFramework="net452" />
   <package id="Avalonia.Xaml.Behaviors" version="0.2.0.238-nightly" targetFramework="net452" />
   <package id="Caliburn.Micro" version="3.0.0" targetFramework="net451" />
   <package id="Caliburn.Micro.Core" version="3.0.0" targetFramework="net451" />
@@ -16,6 +17,7 @@
   <package id="SharpDX" version="3.0.2" targetFramework="net451" />
   <package id="SharpDX.Direct2D1" version="3.0.2" targetFramework="net451" />
   <package id="SharpDX.DXGI" version="3.0.2" targetFramework="net451" />
+  <package id="SkiaSharp" version="1.53.0" targetFramework="net452" />
   <package id="Splat" version="1.6.2" targetFramework="net452" />
   <package id="Sprache" version="2.0.0.50" targetFramework="net461" />
   <package id="System.Reactive" version="3.0.0" targetFramework="net451" />
