Update projects to use cross-platform postbuild script.

--- a/AvalonStudio/AvalonStudio.TestFrameworks.Catch/AvalonStudio.TestFrameworks.Catch.csproj
+++ b/AvalonStudio/AvalonStudio.TestFrameworks.Catch/AvalonStudio.TestFrameworks.Catch.csproj
@@ -123,7 +123,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>if not exist "..\..\..\AvalonStudio\bin\$(ConfigurationName)\Plugins" mkdir ..\..\..\AvalonStudio\bin\$(ConfigurationName)\Plugins
+    <PostBuildEvent>"$(SolutionDir)postbuild" "$(SolutionDir)" "$(PlatformName)" "$(ConfigurationName)"
 copy $(TargetPath) ..\..\..\AvalonStudio\bin\$(ConfigurationName)\Plugins\$(TargetFileName)</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
