--- a/AvalonStudio/AvalonStudio.Projects.Standard/AvalonStudio.Projects.Standard.csproj
+++ b/AvalonStudio/AvalonStudio.Projects.Standard/AvalonStudio.Projects.Standard.csproj
@@ -103,7 +103,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>if not exist "$(SolutionDir)AvalonStudio\bin\$(PlatformName)\$(ConfigurationName)\Plugins" mkdir $(SolutionDir)AvalonStudio\bin\$(PlatformName)\$(ConfigurationName)\Plugins
+    <PostBuildEvent>"$(SolutionDir)postbuild" "$(SolutionDir)" "$(PlatformName)" "$(ConfigurationName)"
 copy $(TargetPath) $(SolutionDir)AvalonStudio\bin\$(PlatformName)\$(ConfigurationName)\Plugins\$(TargetFileName)</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
