--- a/AvalonStudio/AvalonStudio.Toolchains.GCC/AvalonStudio.Toolchains.GCC.csproj
+++ b/AvalonStudio/AvalonStudio.Toolchains.GCC/AvalonStudio.Toolchains.GCC.csproj
@@ -85,6 +85,10 @@
       <Project>{72c71854-5897-4e14-a1ae-b3b48f139af7}</Project>
       <Name>AvalonStudio.Toolchains.Standard</Name>
     </ProjectReference>
+    <ProjectReference Include="..\AvalonStudio.Extensibility\AvalonStudio.Extensibility.csproj">
+      <Project>{5614AA2F-2B01-4E0D-807E-924680C570ED}</Project>
+      <Name>AvalonStudio.Extensibility</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
