--- a/AvalonStudio/AvalonStudio.MiniShell/packages.config
+++ b/AvalonStudio/AvalonStudio.MiniShell/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<packages>  
+<packages>
+  <package id="Avalonia" version="0.4.1-build1860-alpha" targetFramework="net452" />
   <package id="System.Reactive" version="3.0.0" targetFramework="net451" />
   <package id="System.Reactive.Core" version="3.0.0" targetFramework="net451" />
   <package id="System.Reactive.Interfaces" version="3.0.0" targetFramework="net451" />
