--- a/AvalonStudio/AvalonStudio/packages.config
+++ b/AvalonStudio/AvalonStudio/packages.config
@@ -3,7 +3,7 @@
   <package id="Avalonia" version="0.4.1-build1936-alpha" targetFramework="net452" />
   <package id="Avalonia.Desktop" version="0.4.1-build1936-alpha" targetFramework="net452" />
   <package id="Avalonia.Skia.Desktop" version="0.4.1-build1936-alpha" targetFramework="net452" />
-  <package id="Avalonia.Xaml.Behaviors" version="0.2.0.239-nightly" targetFramework="net452" />
+  <package id="Avalonia.Xaml.Behaviors" version="0.4.1-build301-alpha" targetFramework="net452" />
   <package id="Caliburn.Micro" version="3.0.0" targetFramework="net451" />
   <package id="Caliburn.Micro.Core" version="3.0.0" targetFramework="net451" />
   <package id="Prism.Core" version="6.1.0" targetFramework="net451" />
