--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,9 @@ install:
 script:
   - sudo ./buildmono.sh
 notifications:
-  email: false
   webhooks:
-    urls:      
-    on_success: change
-    on_failure: always
-    on_start: never
+    urls:
+      - https://webhooks.gitter.im/e/abf03510b7719b383e2b
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: never     # options: [always|never|change] default: never
