added beginings of signature helper for csharp.

--- a/AvalonStudio/AvalonStudio.Extensibility/AvalonStudio.Extensibility.csproj
+++ b/AvalonStudio/AvalonStudio.Extensibility/AvalonStudio.Extensibility.csproj
@@ -227,6 +227,7 @@
     <Compile Include="Languages\AccessType.cs" />
     <Compile Include="Languages\CompletionAssistance\ICompletionAssistant.cs" />
     <Compile Include="Languages\CompletionAssistance\MethodInfo.cs" />
+    <Compile Include="Languages\CompletionAssistance\SignatureHelpModels.cs" />
     <Compile Include="Languages\ICompletionAdviceControl.cs" />
     <Compile Include="Languages\IndexEntry.cs" />
     <Compile Include="MainMenu\IMenu.cs" />
